--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2021",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "commonjs",                                /* Specify what module code is generated. */
-    "rootDir": "./",                                  /* Specify the root folder within your source files. */
-    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
+    "target": "es6",              /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "commonjs",         /* Specify what module code is generated. */
+    "rootDir": "./",              /* Specify the root folder within your source files. */  
+    "outDir": "build",              
+    "esModuleInterop": true,      /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
   }
 }
